UF-962 - External references
* Adds (optional) external references to all requests